--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 fastapi[all]
-uvicorn==0.21.1
-Pillow==9.5.0
+anyio==3.7.0
+fastapi==0.95.2
+h11==0.14.0
+httpcore==0.17.1
+httptools==0.5.0
+httpx==0.24.1
+idna==3.4
 numpy==1.24.2
-tensorflow==2.10.0
+Pillow==9.5.0
+sniffio==1.3.0
+starlette==0.27.0
+tensorflow
+typing_extensions==4.6.3
+uvicorn
